--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -6,6 +6,6 @@ navbar(class="navbar navbar-expand-lg navbar-light bg-light")
   div(class="collapse navbar-collapse")
     ul(class="navbar-nav ml-auto")
       li(class="nav-item active")
-        a(class="nav-link" href="#") Home
+        a(class="btn btn-primary btn-tweet mr-3" href="/tweet/new") Tweet
       li(class="nav-item")
         a(class="nav-link" href="#") Connexion
