--- a/views/tweets/tweet-form.pug
+++ b/views/tweets/tweet-form.pug
@@ -5,10 +5,14 @@ block content
     div(class="profile-container")
       include ../includes/profile.pug
     div(class="flex-fill")
-      form(class="card" method="post" action="/api/tweet")
+      form(class="card" method="post" action="/api/tweets")
         div(class="card-header") Ecrire un tweet
         div(class="card-body")
           div(class="form-group")
             textarea(class="form-control" name="content" placeholder="What is happening")
+          if errors
+            ul(class="my-2")
+              each error in errors
+                li(class="text-danger")= error
           div(class="w-100")
             input(type="submit" value="send" class="btn btn-primary ml-auto d-block")
