🐦  display the list of tweets

--- a/views/tweets/tweet-list.pug
+++ b/views/tweets/tweet-list.pug
@@ -4,4 +4,8 @@ block content
   div(class="d-flex flex-row content mx-auto")
     div(class="profile-container")
       include ../includes/profile.pug
-    div(class="flex-fill") tweets
+    div(class="flex-fill d-flex flex-column")
+      if tweets
+        each tweet in tweets
+          div(class="card tweet-element")
+            div(class="card-body")= tweet.content
