--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,3 +19,13 @@
 .b1 {
   border: 1px solid green;
 }
+
+.tweet-element:first-child {
+  border-top: 1px solid #ddd;
+}
+
+.tweet-element {
+  border-radius: 0px;
+  border-top: 0px;
+  font-size: 14px;
+}
