--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -1,11 +1,11 @@
 navbar(class="navbar navbar-expand-lg navbar-light bg-light")
-  a(class="navbar-brand" href="#")
+  a(class="navbar-brand" href="/tweets")
     img(width="30" height="30" src="/images/logo-twitter-png-47489.png")
   button(class="navbar-toggler")
     span(class="navbar-toggler-icon")
   div(class="collapse navbar-collapse")
     ul(class="navbar-nav ml-auto")
       li(class="nav-item active")
-        a(class="btn btn-primary btn-tweet mr-3" href="/tweet/new") Tweet
+        a(class="btn btn-primary btn-tweet mr-3" href="/tweets/new") Tweet
       li(class="nav-item")
         a(class="nav-link" href="#") Connexion
