--- a/views/tweets/tweet-form.pug
+++ b/views/tweets/tweet-form.pug
@@ -5,7 +5,7 @@ block content
     div(class="profile-container")
       include ../includes/profile.pug
     div(class="flex-fill")
-      form(class="card" method="post" action="/api/tweets")
+      form(class="card" method="post" action="/tweets")
         div(class="card-header") Ecrire un tweet
         div(class="card-body")
           div(class="form-group")
