--- a/views/tweets/tweet-form.pug
+++ b/views/tweets/tweet-form.pug
@@ -5,11 +5,11 @@ block content
     div(class="profile-container")
       include ../includes/profile.pug
     div(class="flex-fill")
-      form(class="card" method="post" action="/tweets")
+      form(class="card" method="post" action= tweet._id ? "/tweets/update/" + tweet._id : "/tweets")
         div(class="card-header") Ecrire un tweet
         div(class="card-body")
           div(class="form-group")
-            textarea(class="form-control" name="content" placeholder="What is happening")
+            textarea(class="form-control" name="content" placeholder="What is happening")= tweet.content
           if errors
             ul(class="my-2")
               each error in errors
