--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -5,9 +5,13 @@ navbar(class="navbar navbar-expand-lg navbar-light bg-light")
     span(class="navbar-toggler-icon")
   div(class="collapse navbar-collapse")
     ul(class="navbar-nav ml-auto")
-      li(class="nav-item active")
-        a(class="btn btn-primary btn-tweet mr-3" href="/tweets/new") Tweet
-      li(class="nav-item")
-        a(class="nav-link" href="/auth/signin/form") Connexion
-      li(class="nav-item")
-        a(class="nav-link" href="/users/signup/form") Inscription
+      if isAuthenticated
+        li(class="nav-item active")
+          a(class="btn btn-primary btn-tweet mr-3" href="/tweets/new") Tweet
+        li(class="nav-item active")
+          a(class="nav-link" href="/auth/signout") Déconnexion
+      else
+        li(class="nav-item")
+          a(class="nav-link" href="/auth/signin/form") Connexion
+        li(class="nav-item")
+          a(class="nav-link" href="/users/signup/form") Inscription
