--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,19 @@
 .profile-container {
   width: 30%;
   max-width: 300px;
+  color: #657786;
+}
+
+.navbar {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+.img-fluid {
+  max-height: 100px;
+}
+
+body {
+  background-color: #f8f9fa;
 }
 
 .btn-tweet {
@@ -21,11 +34,12 @@
 }
 
 .tweet-element:first-child {
-  border-top: 1px solid #ddd;
+  border-top: 0px
 }
 
 .tweet-element {
   border-radius: 0px;
-  border-top: 0px;
+  border-top: 1px solid #ddd;
+  border: 0px;
   font-size: 14px;
 }
