--- a/views/includes/profile.pug
+++ b/views/includes/profile.pug
@@ -2,15 +2,15 @@ script(src="/javascripts/profile.js")
 div(class="profile-container bg-white mr-3 d-flex flex-column")
   form( id="form-container" class="d-flex p-3 flex-row justify-content-center align-items-center" action="/users/update/image" method="post" enctype="multipart/form-data" )
     input(type="file" name="avatar" class="d-none" id="input-avatar")
-    img(src=`${ currentUser.avatar }` class="img-fluid p-2" id="image-profile")
+    img(src=`${ user.avatar }` class="img-fluid p-2" id="image-profile")
   div(class="d-flex flex-row justify-content-center align-items-center my-3")
-    p= `${ currentUser.username } (${ currentUser.local.email })`
+    p= `${ user.username } (${ user.local.email })`
   div(class="text-center d-flex flex-row justify-content-center align-items-center my-3")
     div(class="flex-fill")
       p
         strong Tweet
         br
-        span(class="text-primary")= tweets.length
+        span(class="text-primary")= tweets.length 
     div(class="flex-fill")
       p
         strong Following
