--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,3 +70,20 @@ body {
   background: #eee;
   transition: background 0.2s;
 }
+
+.btn-follow {
+  color:#007bff!important;
+  border-radius: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  border-width: 2px;
+}
+
+.btn-follow:hover {
+  color:white !important;
+}
+
+.btn-unfollow {
+  border-radius: 30px;
+  font-weight: bold;
+}
